// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  <ArticleError />
</Context.Provider>
`;

exports[`2. loading 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  null
</Context.Provider>
`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  <ArticleSkeleton>
    <View>
      <Text>
        Some Short Headline
      </Text>
      <ArticleFlags
        longRead={false}
        withContainer={true}
      />
      <View>
        <View>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
            color="#1D1D1B"
          />
        </View>
        <View />
        <View>
          <Text>
            Friday March 13 2015, 6.54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <ModalImage
        aspectRatio={1.7777777777777777}
        caption={
          <Caption
            credits="Some Credits"
            text="Some Caption"
          />
        }
        highResSize={660}
        index={0}
        onImagePress={null}
        uri="https://crop169.io"
      />
      <CenteredCaption
        credits="Some Credits"
        text="Some Caption"
      />
    </View>
  </ArticleSkeleton>
</Context.Provider>
`;

exports[`4. an article with ads 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  <ArticleSkeleton>
    <View>
      <Text>
        Some Headline
      </Text>
      <ArticleFlags
        longRead={false}
        withContainer={true}
      />
      <View>
        <View>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
            color="#1D1D1B"
          />
        </View>
        <View />
        <View>
          <Text>
            Friday March 13 2015, 6.54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <ModalImage
        aspectRatio={1.7777777777777777}
        caption={
          <Caption
            credits="Some Credits"
            text="Some Caption"
          />
        }
        highResSize={660}
        index={0}
        onImagePress={null}
        uri="https://crop169.io"
      />
      <CenteredCaption
        credits="Some Credits"
        text="Some Caption"
      />
    </View>
  </ArticleSkeleton>
</Context.Provider>
`;
